{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 103,
  "lineage": "a752618e-b555-e7d3-a6fd-6d546f9aafcc",
  "resources": [
    {
      "module": "module.NAT_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d58b3624df7f99fa",
            "association_id": "eipassoc-0a4626ae38650fc23",
            "domain": "vpc",
            "id": "eipalloc-0d58b3624df7f99fa",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ab4541aedede8e8d",
            "private_dns": "ip-10-0-1-155.ec2.internal",
            "private_ip": "10.0.1.155",
            "public_dns": "ec2-35-168-164-231.compute-1.amazonaws.com",
            "public_ip": "35.168.164.231",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "CRC-nat-eip1"
            },
            "tags_all": {
              "name": "CRC-nat-eip1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.NAT_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02bc16105fc3256d6",
            "association_id": "eipassoc-08b9291a0c2973285",
            "domain": "vpc",
            "id": "eipalloc-02bc16105fc3256d6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d7df411f645e0308",
            "private_dns": "ip-10-0-1-102.ec2.internal",
            "private_ip": "10.0.1.102",
            "public_dns": "ec2-52-5-155-189.compute-1.amazonaws.com",
            "public_ip": "52.5.155.189",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "CRC-nat-eip2"
            },
            "tags_all": {
              "name": "CRC-nat-eip2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.NAT_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d58b3624df7f99fa",
            "association_id": "eipassoc-0a4626ae38650fc23",
            "connectivity_type": "public",
            "id": "nat-08ccb2699f55392b4",
            "network_interface_id": "eni-0ab4541aedede8e8d",
            "private_ip": "10.0.1.155",
            "public_ip": "35.168.164.231",
            "subnet_id": "subnet-0d5463d57f2be19af",
            "tags": {
              "name": "CRC-nat-gw1"
            },
            "tags_all": {
              "name": "CRC-nat-gw1"
            }
          },
          "dependencies": [
            "module.NAT_gateway.aws_eip.nat_eip1",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.NAT_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02bc16105fc3256d6",
            "association_id": "eipassoc-08b9291a0c2973285",
            "connectivity_type": "public",
            "id": "nat-06b449ac063d3cbc3",
            "network_interface_id": "eni-0d7df411f645e0308",
            "private_ip": "10.0.1.102",
            "public_ip": "52.5.155.189",
            "subnet_id": "subnet-0d5463d57f2be19af",
            "tags": {
              "name": "CRC-nat-gw2"
            },
            "tags_all": {
              "name": "CRC-nat-gw2"
            }
          },
          "dependencies": [
            "module.NAT_gateway.aws_eip.nat_eip2",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.NAT_gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128909019745:route-table/rtb-0a5263c2e22ef5012",
            "id": "rtb-0a5263c2e22ef5012",
            "owner_id": "128909019745",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08ccb2699f55392b4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CRC-private-rt1"
            },
            "tags_all": {
              "Name": "CRC-private-rt1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f50a2b6fe8735c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.NAT_gateway.aws_eip.nat_eip1",
            "module.NAT_gateway.aws_nat_gateway.nat_gw1",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.NAT_gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128909019745:route-table/rtb-05caba6dc6dd7ae53",
            "id": "rtb-05caba6dc6dd7ae53",
            "owner_id": "128909019745",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06b449ac063d3cbc3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CRC-private-rt2"
            },
            "tags_all": {
              "Name": "CRC-private-rt2"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f50a2b6fe8735c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.NAT_gateway.aws_eip.nat_eip2",
            "module.NAT_gateway.aws_nat_gateway.nat_gw2",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.NAT_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a285f93e310dc009",
            "route_table_id": "rtb-0a5263c2e22ef5012",
            "subnet_id": "subnet-02b61d5c845e8dab4"
          },
          "dependencies": [
            "module.NAT_gateway.aws_eip.nat_eip1",
            "module.NAT_gateway.aws_nat_gateway.nat_gw1",
            "module.NAT_gateway.aws_route_table.private_rt",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.private_sub1",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.NAT_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef770df62ac16e47",
            "route_table_id": "rtb-05caba6dc6dd7ae53",
            "subnet_id": "subnet-05a134110e8dcec1e"
          },
          "dependencies": [
            "module.NAT_gateway.aws_eip.nat_eip2",
            "module.NAT_gateway.aws_nat_gateway.nat_gw2",
            "module.NAT_gateway.aws_route_table.private_rt2",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.private_sub2",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02396cdd13e9a1257",
            "arn": "arn:aws:ec2:us-east-1:128909019745:instance/i-0a9ba13c3a2ade5ec",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a9ba13c3a2ade5ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Server_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f5b374b2ebbd84f4",
            "private_dns": "ip-10-0-1-252.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.252",
            "public_dns": "ec2-3-235-230-168.compute-1.amazonaws.com",
            "public_ip": "3.235.230.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-019646d93bdae8623",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5463d57f2be19af",
            "tags": {
              "Name": "Bastion Host"
            },
            "tags_all": {
              "Name": "Bastion Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01fda689af25e44d4"
            ]
          },
          "dependencies": [
            "module.EFS.aws_efs_file_system.server_files",
            "module.bastion_host.data.template_cloudinit_config.config",
            "module.bastion_host.data.template_file.user_data",
            "module.security_groups.aws_security_group.bastion_host_sg",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "server_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:128909019745:loadbalancer/app/server-lb/da5fdc09f11737ef",
            "arn_suffix": "app/server-lb/da5fdc09f11737ef",
            "desync_mitigation_mode": "defensive",
            "dns_name": "server-lb-1925580673.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:128909019745:loadbalancer/app/server-lb/da5fdc09f11737ef",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "server-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-027a524ed05dbbed8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c940fa3c44319820"
              },
              {
                "subnet_id": "subnet-0d5463d57f2be19af"
              }
            ],
            "subnets": [
              "subnet-0c940fa3c44319820",
              "subnet-0d5463d57f2be19af"
            ],
            "tags": {
              "name": "CRC-lb"
            },
            "tags_all": {
              "name": "CRC-lb"
            },
            "vpc_id": "vpc-03f50a2b6fe8735c6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.lb_sg",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:128909019745:listener/app/server-lb/da5fdc09f11737ef/7a33092b0eb4e82f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:128909019745:targetgroup/lb-target-group/110c20e080aad42c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:128909019745:listener/app/server-lb/da5fdc09f11737ef/7a33092b0eb4e82f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:128909019745:loadbalancer/app/server-lb/da5fdc09f11737ef",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.server_lb",
            "module.load_balancer.aws_lb_target_group.target",
            "module.security_groups.aws_security_group.lb_sg",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:128909019745:targetgroup/lb-target-group/110c20e080aad42c",
            "arn_suffix": "targetgroup/lb-target-group/110c20e080aad42c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "300",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:128909019745:targetgroup/lb-target-group/110c20e080aad42c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03f50a2b6fe8735c6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128909019745:security-group/sg-01fda689af25e44d4",
            "description": "Allow http/s inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01fda689af25e44d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http internet traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http internet traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https internet traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "bastion_host_sg",
            "name_prefix": "",
            "owner_id": "128909019745",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-host-SG"
            },
            "tags_all": {
              "Name": "bastion-host-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f50a2b6fe8735c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128909019745:security-group/sg-0ef47623e9aae0993",
            "description": "Allow nfs inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef47623e9aae0993",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "nfs from bastion host and private instance",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01fda689af25e44d4",
                  "sg-057fab086680b2d7e"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs_sg",
            "name_prefix": "",
            "owner_id": "128909019745",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "efs-SG"
            },
            "tags_all": {
              "Name": "efs-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f50a2b6fe8735c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.bastion_host_sg",
            "module.security_groups.aws_security_group.lb_sg",
            "module.security_groups.aws_security_group.private_instances",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128909019745:security-group/sg-027a524ed05dbbed8",
            "description": "Allow http/s inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027a524ed05dbbed8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http internet traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https internet traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "load_balancer_sg",
            "name_prefix": "",
            "owner_id": "128909019745",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "load-balancer-SG"
            },
            "tags_all": {
              "Name": "load-balancer-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f50a2b6fe8735c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128909019745:security-group/sg-057fab086680b2d7e",
            "description": "Allow http inbound traffic from load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057fab086680b2d7e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "load_balancer_traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-027a524ed05dbbed8"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_instances_sg",
            "name_prefix": "",
            "owner_id": "128909019745",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-instances-SG"
            },
            "tags_all": {
              "Name": "private-instances-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f50a2b6fe8735c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.lb_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bh2efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 2049,
            "id": "sgrule-4015294092",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01fda689af25e44d4",
            "security_group_rule_id": "sgr-0e4c682c7a48e4555",
            "self": false,
            "source_security_group_id": "sg-0ef47623e9aae0993",
            "timeouts": null,
            "to_port": 2049,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.bastion_host_sg",
            "module.security_groups.aws_security_group.efs_sg",
            "module.security_groups.aws_security_group.lb_sg",
            "module.security_groups.aws_security_group.private_instances",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb2pi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-2724153945",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-027a524ed05dbbed8",
            "security_group_rule_id": "sgr-05389320539c68e38",
            "self": false,
            "source_security_group_id": "sg-057fab086680b2d7e",
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.lb_sg",
            "module.security_groups.aws_security_group.private_instances",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "pi2efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 2049,
            "id": "sgrule-2020843884",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-057fab086680b2d7e",
            "security_group_rule_id": "sgr-0f3beb92946ae61fa",
            "self": false,
            "source_security_group_id": "sg-0ef47623e9aae0993",
            "timeouts": null,
            "to_port": 2049,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.bastion_host_sg",
            "module.security_groups.aws_security_group.efs_sg",
            "module.security_groups.aws_security_group.lb_sg",
            "module.security_groups.aws_security_group.private_instances",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128909019745:internet-gateway/igw-0e285ba5df1429828",
            "id": "igw-0e285ba5df1429828",
            "owner_id": "128909019745",
            "tags": {
              "Name": "CRC-igw"
            },
            "tags_all": {
              "Name": "CRC-igw"
            },
            "vpc_id": "vpc-03f50a2b6fe8735c6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128909019745:route-table/rtb-0f1ca8e5aed6b4b2e",
            "id": "rtb-0f1ca8e5aed6b4b2e",
            "owner_id": "128909019745",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e285ba5df1429828",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CRC-public-rt"
            },
            "tags_all": {
              "Name": "CRC-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f50a2b6fe8735c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2704ddd93e627fd",
            "route_table_id": "rtb-0f1ca8e5aed6b4b2e",
            "subnet_id": "subnet-0d5463d57f2be19af"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008f3d5598aac1e4f",
            "route_table_id": "rtb-0f1ca8e5aed6b4b2e",
            "subnet_id": "subnet-0c940fa3c44319820"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128909019745:subnet/subnet-02b61d5c845e8dab4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b61d5c845e8dab4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "128909019745",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CRCprivate-subnet-1"
            },
            "tags_all": {
              "Name": "CRCprivate-subnet-1"
            },
            "vpc_id": "vpc-03f50a2b6fe8735c6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128909019745:subnet/subnet-05a134110e8dcec1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a134110e8dcec1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "128909019745",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CRCprivate-subnet-2"
            },
            "tags_all": {
              "Name": "CRCprivate-subnet-2"
            },
            "vpc_id": "vpc-03f50a2b6fe8735c6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128909019745:subnet/subnet-0d5463d57f2be19af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5463d57f2be19af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "128909019745",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CRC-public-subnet-1"
            },
            "tags_all": {
              "Name": "CRC-public-subnet-1"
            },
            "vpc_id": "vpc-03f50a2b6fe8735c6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128909019745:subnet/subnet-0c940fa3c44319820",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c940fa3c44319820",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "128909019745",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CRC-public-subnet-2"
            },
            "tags_all": {
              "Name": "CRC-public-subnet-2"
            },
            "vpc_id": "vpc-03f50a2b6fe8735c6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:128909019745:vpc/vpc-03f50a2b6fe8735c6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07b1425c7927eab8e",
            "default_route_table_id": "rtb-062df703fe2a1499b",
            "default_security_group_id": "sg-018e124f17cb5f22d",
            "dhcp_options_id": "dopt-0f0e0f131e93e1757",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03f50a2b6fe8735c6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-062df703fe2a1499b",
            "owner_id": "128909019745",
            "tags": {
              "Name": "CRC-vpc"
            },
            "tags_all": {
              "Name": "CRC-vpc"
            }
          }
        }
      ]
    }
  ]
}